newer version i think

--- a/adventp5.ipynb
+++ b/adventp5.ipynb
@@ -35,11 +35,11 @@
       "outputs": [
         {
           "name": "stdout",
-          "text": "['79', '14', '55', '13']\n['seeds: 79 14 55 13', 'seed-to-soil map:\\n50 98 2\\n52 50 48', 'soil-to-fertilizer map:\\n0 15 37\\n37 52 2\\n39 0 15', 'fertilizer-to-water map:\\n49 53 8\\n0 11 42\\n42 0 7\\n57 7 4', 'water-to-light map:\\n88 18 7\\n18 25 70', 'light-to-temperature map:\\n45 77 23\\n81 45 19\\n68 64 13', 'temperature-to-humidity map:\\n0 69 1\\n1 0 69', 'humidity-to-location map:\\n60 56 37\\n56 93 4']\n['seed-to-soil map:\\n50 98 2\\n52 50 48', 'soil-to-fertilizer map:\\n0 15 37\\n37 52 2\\n39 0 15', 'fertilizer-to-water map:\\n49 53 8\\n0 11 42\\n42 0 7\\n57 7 4', 'water-to-light map:\\n88 18 7\\n18 25 70', 'light-to-temperature map:\\n45 77 23\\n81 45 19\\n68 64 13', 'temperature-to-humidity map:\\n0 69 1\\n1 0 69', 'humidity-to-location map:\\n60 56 37\\n56 93 4']\n",
+          "text": "['79', '14', '55', '13']\n['seed-to-soil map:\\n50 98 2\\n52 50 48', 'soil-to-fertilizer map:\\n0 15 37\\n37 52 2\\n39 0 15', 'fertilizer-to-water map:\\n49 53 8\\n0 11 42\\n42 0 7\\n57 7 4', 'water-to-light map:\\n88 18 7\\n18 25 70', 'light-to-temperature map:\\n45 77 23\\n81 45 19\\n68 64 13', 'temperature-to-humidity map:\\n0 69 1\\n1 0 69', 'humidity-to-location map:\\n60 56 37\\n56 93 4']\n",
           "output_type": "stream"
         }
       ],
-      "execution_count": 4
+      "execution_count": 16
     },
     {
       "cell_type": "code",
@@ -54,7 +54,7 @@
           "output_type": "stream"
         }
       ],
-      "execution_count": 7
+      "execution_count": 17
     },
     {
       "cell_type": "code",
@@ -62,14 +62,8 @@
       "metadata": {
         "trusted": true
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "text": "values: ['50', '98', '2'] range: 2 source: 98 target: 50 shift: -48\n51\n50 98 2\n52 50 48\n0 15 37\n37 52 2\n39 0 15\n49 53 8\n0 11 42\n42 0 7\n57 7 4\n88 18 7\n18 25 70\n45 77 23\n81 45 19\n68 64 13\n0 69 1\n1 0 69\n60 56 37\n56 93 4\nvalues: ['50', '98', '2'] range: 2 source: 98 target: 50 shift: -48\nvalues: ['52', '50', '48'] range: 48 source: 50 target: 52 shift: 2\n",
-          "output_type": "stream"
-        }
-      ],
-      "execution_count": 23
+      "outputs": [],
+      "execution_count": 18
     },
     {
       "cell_type": "code",
@@ -80,11 +74,11 @@
       "outputs": [
         {
           "name": "stdout",
-          "text": "[<__main__.Map object at 0x27d1978>, <__main__.Map object at 0x27993f8>]\nvalues: ['50', '98', '2'] range: 2 source: 98 target: 50 shift: -48\nvalues: ['52', '50', '48'] range: 48 source: 50 target: 52 shift: 2\n68\n51\n",
+          "text": "[<__main__.Map object at 0x29465f8>, <__main__.Map object at 0x28ac170>]\nvalues: ['50', '98', '2'] range: 2 source: 98 target: 50 shift: -48\nvalues: ['52', '50', '48'] range: 48 source: 50 target: 52 shift: 2\n68\n51\n",
           "output_type": "stream"
         }
       ],
-      "execution_count": 34
+      "execution_count": 19
     },
     {
       "cell_type": "markdown",
@@ -104,7 +98,7 @@
           "output_type": "stream"
         }
       ],
-      "execution_count": 36
+      "execution_count": 20
     },
     {
       "cell_type": "code",
@@ -119,7 +113,7 @@
           "output_type": "stream"
         }
       ],
-      "execution_count": 39
+      "execution_count": 21
     },
     {
       "cell_type": "markdown",
@@ -134,23 +128,80 @@
       },
       "outputs": [
         {
-          "name": "stdout",
-          "text": "858905075\n915841668\n947763189\n1214782615\n",
-          "output_type": "stream"
-        },
-        {
-          "ename": "<class 'MemoryError'>",
-          "evalue": "",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[51], line 32\u001b[0m\n\u001b[1;32m     30\u001b[0m         \u001b[38;5;28mprint\u001b[39m(endIndex)\n\u001b[1;32m     31\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(startIndex, endIndex):\n\u001b[0;32m---> 32\u001b[0m             fullSeedList\u001b[38;5;241m.\u001b[39mappend(i)\n\u001b[1;32m     33\u001b[0m     counter \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     34\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m \u001b[38;5;28mrange\u001b[39m\n",
-            "\u001b[0;31mMemoryError\u001b[0m: "
-          ],
-          "output_type": "error"
+          "execution_count": 22,
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": "' brute force infinite memory attempt\\ncounter = 1\\nfullSeedList = []\\nfor seed in seeds:\\n    if (counter-1) % 2 == 0:\\n        # second seed found\\n        startIndex = int(seeds[counter -1])\\n        endIndex = int(seeds[counter]) + startIndex\\n        print(startIndex)\\n        print(endIndex)\\n        for i in range(startIndex, endIndex):\\n            fullSeedList.append(i)\\n    counter += 1\\ndel range\\nfor i in range(10):\\n    print(i)\\n    print(fullSeedList[i])'"
+          },
+          "metadata": {}
         }
       ],
-      "execution_count": 51
+      "execution_count": 22
+    },
+    {
+      "cell_type": "markdown",
+      "source": "- incomming range 1-100\n- your map can be all below, overlap bottom, all contained in middle, overlap top, and all above\n- map (33-34)-> (135-136), 90->93\n- (1-32), (33-34), (35-100)\n- map2 (40-80) -> 140-180 , 93-> 107\n- 1-32), 33-34, 34-39, 40-80, 81-92, 90? 93? 100\n- compare 1 map 2 next then translate back to the start, then do ",
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "source": "input = open('p5-exampleInput.txt','r')\nlines = input.read().split('\\n\\n')\nseeds = lines[0].split(':')[1].split()\ndel lines[0] #already got seed info\n\nmaps = []\nfor line in lines:\n    maps.append(digest_map(line))\n#print(maps)    \n\nmapGroups = []\nfor list in maps:\n    newGroup = []\n    for map in list:\n        #print(map)\n        newGroup.append(Map(map))\n    mapGroup = MapGroup(newGroup)\n    mapGroups.append(mapGroup)\n#print(mapGroups)\n\nresult = []\nfor seed in seeds:\n    #pass each seed through all 7 mappers, append to result array\n    seed = int(seed)\n    for mapGroup in mapGroups:\n        #print(\"translated \" + str(seed))\n        seed = mapGroup.translate(seed)\n        #print(\"into: \" + str(seed))\n    result.append(seed)\n\nprint(result)\nprint(\"the smallest number is: \" + str(min(result)))\n\ncount = 0\nseedRange = []\nfor seed in seeds:\n    if not (count % 2 ==0):\n        start = int(seeds[count-1])\n        end = int(seeds[count]) + int(start)\n        seedRange.append([start, end])\n    count += 1\n\nprint(seedRange)",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "text": "[82, 43, 86, 35]\nthe smallest number is: 35\n[[79, 93], [55, 68]]\n",
+          "output_type": "stream"
+        }
+      ],
+      "execution_count": 23
+    },
+    {
+      "cell_type": "code",
+      "source": "firstRange = seedRange[0]\nprint(firstRange)\nfirstMapGroup = mapGroups[0]\n#print(firstMapGroup.maps)\nfor i in range(len(firstMapGroup.maps)):\n    print(firstMapGroup.maps[i])",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "text": "[79, 93]\nvalues: ['50', '98', '2'] range: 2 source: 98 target: 50 shift: -48\nvalues: ['52', '50', '48'] range: 48 source: 50 target: 52 shift: 2\n",
+          "output_type": "stream"
+        }
+      ],
+      "execution_count": 31
+    },
+    {
+      "cell_type": "code",
+      "source": "firstMap = firstMapGroup.maps[1]\nprint(firstMap)\nprint(firstRange)",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "text": "values: ['52', '50', '48'] range: 48 source: 50 target: 52 shift: 2\n[79, 93]\n",
+          "output_type": "stream"
+        }
+      ],
+      "execution_count": 34
+    },
+    {
+      "cell_type": "code",
+      "source": "start = firstRange[0]\nend = firstRange[1]\nmapStart = firstMap.source\nmapEnd = firstMap.source + firstMap.range\nprint(start)\nprint(end)\nprint(mapStart)\nprint(mapEnd)",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "text": "79\n93\n50\n98\n",
+          "output_type": "stream"
+        }
+      ],
+      "execution_count": 35
     },
     {
       "cell_type": "code",
